update for sale

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -1,6 +1,6 @@
 {
   "SEO": {
-    "TITLE": "Tùng"
+    "TITLE": "Portfolio - Trịnh Thanh Tùng"
   },
   "LANG": {
     "VI": "Tiếng Việt",
@@ -17,7 +17,7 @@
     "CONTACT_ME": "Contact Me",
     "HI_FULL_NAME": "Hi, I'm Trinh Thanh Tung",
     "IM_POSITION": "I’m Front-end Developer.",
-    "BASIC_DESCRIPTION": "With VS Code and coffee, i’ll help designers and client bring their ideas to life. ",
+    "BASIC_DESCRIPTION": "With VS Code and coffee, i’ll help designers and client bring their ideas to life.",
     "INTRO_GO_TO_ABOUT_ME": "Since starting my journey as a front-end developer over 2 years ago, I began as a software engineer. Throughout projects, I have consistently held the position of a front-end developer. My upcoming goal is to enhance my front-end technical skills and eventually transition into a full-stack developer role or specialize in the data/Backend side, aspiring to become a data engineer.",
     "COMPANIES_WORKED": "Companies Worked",
     "COMPLETED_PROJECTS": "Completed Projects",
