--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -3,7 +3,9 @@
     "TITLE": "My Portfolio",
     "TITLE_NOT_FOUND": "404 :(",
     "TITLE_PORTPOLIO_HOME": "Portfolio - Home",
-    "TITLE_PORTPOLIO_ABOUT_ME": "Portfolio - About Me"
+    "TITLE_PORTPOLIO_ABOUT_ME": "Portfolio - About Me",
+    "MANAGER": "Manager",
+    "MANAGER_AUTH": "Manager - Auth"
   },
   "LANG": {
     "VI": "Tiếng Việt",
