--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -13,7 +13,8 @@
   },
   "MENU": {
     "HOME": "Home",
-    "ABOUT_ME": "About Me"
+    "ABOUT_ME": "About Me",
+    "ANIMATION": "Animation"
   },
   "COMMON": {
     "LOGO": "Tungne",
