--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -151,8 +151,8 @@
     "USER_INPUT": "User Name",
     "ROLE_SELECT": "Role",
     "AGE_INPUT_WINFIT": "Nhập tuổi của bạn",
-    "HEIGHT_INPUT_WINFIT": "Nhập chiều cao của bạn",
-    "WEIGHT_INPUT_WINFIT": "Nhập cân nặng của bạn",
+    "HEIGHT_INPUT_WINFIT": "Nhập chiều cao của bạn (cm)",
+    "WEIGHT_INPUT_WINFIT": "Nhập cân nặng của bạn (kg)",
     "AGE_INPUT": "Enter Your Age",
     "HEIGHT_INPUT": "Enter Your Height",
     "WEIGHT_INPUT": "Enter Your Weight"
@@ -163,7 +163,40 @@
     "EMAIL": "Email",
     "PHONE_NUMBER": "Phone Number",
     "ROLE": "Role",
-    "ACTION": "Action"
+    "ACTION": "Action",
+    "ABOUT_AGE": "Độ tuổi",
+    "EXPLAIN_INDEX_BMR": "Diễn giải tỷ lệ BMR",
+    "INDEX_BMI": "Tỷ lệ BMI",
+    "INDEX_BODY_FAT": "Tỷ lệ mỡ cơ thể",
+    "INDEX_VISCERAL_FAT": "Tỷ lệ mỡ nội tạng",
+    "INDEX_SKELETAL_MUSCLES": "Tỷ lệ cơ xương",
+    "MAN": "Nam",
+    "WOMAN": "Nữ",
+    "TYPE": "Phân loại",
+    "VISCERAL_FAT_LEVEL": "Mức mỡ nội tạng",
+    "FITNESS": "Thể hình",
+    "GOOD": "Tốt",
+    "HIGH": "Cao",
+    "VERY_HIGH": "Rất cao",
+    "DANGER": "Nguy hiểm",
+    "VERY_DANGER": "Rất nguy hiểm",
+    "BMR_PER_WEIGHT_PER_DAY": "Độ tuổi",
+    "LOW": "Thấp",
+    "NORMAL": "Bình thường",
+    "BMI": "BMI",
+    "UNDERWEIGHT": "Thiếu cân",
+    "BALANCE": "Cân đối",
+    "OVERWEIGHT": "Thừa cân",
+    "OBESITY": "Béo phì",
+    "DANGEROUS_OBESITY": "Béo phì nguy hiểm"
+  },
+  "GENDER": {
+    "INDEX": "Gender",
+    "INDEX_WINFIT": "Giới Tính",
+    "MAN": "Man",
+    "WOMAN": "Woman",
+    "MAN_WINFIT": "Nam",
+    "WOMAN_WINFIT": "Nữ"
   },
   "EMPTY": ""
 }
